<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tips_sound_change"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_choose_sound_type"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>
            <Spinner
                android:id="@+id/sound_type_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_sound_selector"
                android:prompt="@string/tips_choose_sound_type"
                android:spinnerMode="dialog">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_choose_reverberation_type"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>

            <Spinner
                android:id="@+id/reverberation_type_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_sound_selector"
                android:prompt="@string/tips_choose_reverberation_type"
                android:spinnerMode="dialog">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_choose_equalizer_type"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>

            <Spinner
                android:id="@+id/equalizer_type_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_sound_selector"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_pitch"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>

            <SeekBar
                android:id="@+id/mPitchSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:progressBackgroundTint="@android:color/holo_blue_bright"
                android:progressTint="@android:color/black"
                android:thumbTint="@color/dark_black" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>